# DesignPatterns

./: CMakeLists.txt  README.md  run.sh
solid/: open_close.cpp  single_responsibility.cpp
